--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
+    "date-fns": "^4.1.0",
+    "fns": "^1.0.0",
     "framer-motion": "^12.16.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.513.0",
