--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-spring": "^10.0.1",
-    "tailwind-merge": "^3.3.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^3.3.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
