Adding Seller Page

--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@heroicons/react": "^2.2.0",
     "@netlify/next": "^1.4.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-google-maps/api": "^2.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
     "date-fns": "^4.1.0",
     "fns": "^1.0.0",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "^12.18.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
