--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-spring": "^10.0.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^3.3.0",
     "tsparticles-engine": "^2.12.0"
